fixing some field alignment and getting nodes stuff working

--- a/src/pirri/static/style.css
+++ b/src/pirri/static/style.css
@@ -79,6 +79,7 @@ section {
 body {
   background-color: #273956;
   color: #fff;
+  font-size: 13px;
 }
 body {
     font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
